Fixed alignment in footer logo area

--- a/themes/division-subtheme/src/scss/layouts/theme.scss
+++ b/themes/division-subtheme/src/scss/layouts/theme.scss
@@ -60,7 +60,8 @@
 	font-size: 15px;
 	margin-top: 60px;
 	p{
-		margin: 0.6667em 0;
+		margin-top:30px;
+		margin-left:20px;
 	}
 
 }
@@ -99,7 +100,7 @@
 	font-size: 15px;
 	margin-top: 60px;
 	p{
-		margin: 0.6667em 0;
+		
 	}
 
 }
